# cna_mixture

./: .gitignore  LICENSE  NOTES.md  cna_mixture.py  lbfgsb_nb.py  pyproject.toml  pytest.ini  slsqp.py
cna-mixture-rs/: Cargo.toml  pyproject.toml
cna-mixture-rs/src/: lib.rs
python/cna_mixture/: baf_test.py  beta_binomial.py  cna_emission.py  cna_hmm.py  cna_inference.py  cna_mixture.py  cna_mixture_params.py  cna_mixture_python.py  cna_sim.py  encoding.py  fit_gaussian_mixture.py  gaussian_mixture.py  hidden_markov.py  lbfgsb_bb.py  lbfgsb_nb.py  negative_binomial.py  plotting.py  state_priors.py  torch_nb.py  transfer.py  utils.py
python/cna_mixture/sandbox/: baf_draft.py  bb_optimizers.py  initialize_mixture.py  kmeans++_study.py  lbfgsb_bb.py  lbfgsb_nb.py  minor_allele.py  nb_optimizers.py  slsqp.py  test.py  torch_grad_nb.py  torch_nb.py
python/cna_mixture/scripts/: run_cna_mixture.py  run_inference.py  run_model.py  run_sim.py
tests/: conftest.py  test_cna_emission.py  test_cna_inference.py  test_cna_mixture.py  test_cna_mixture_params.py  test_cna_sim.py  test_hidden_markov.py  test_state_priors.py  test_utils.py
