[tool.poetry]
name = "cna_mixture"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["M. J. Wilson <mjwilson@princeton.edu>"]
packages = [
    { include = "cna_mixture", from = "python" },
]

[tool.poetry.dependencies]
python = "3.12.2"
numpy = "^1.26.0"
maturin = "^1.1.0"
matplotlib = "*"
scipy = "*"
scikit-learn = "*"

[tool.poetry.scripts]
run_cna_mixture = 'cna_mixture.scripts.run_cna_mixture:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
